= 0.9.3

* Fix a bug when using class_name on belongs_to associations without
foreign_key

= 0.9.2

* Ruby 1.9 compatability

= 0.9.1

* Change group_by so that it will not throw an exception for missing column
names, since we want to be able to group by arbitrary things.

= 0.9.0 

* Added a github pages page with a quick intro.

* Add tests for working with default scopes.

* de-hackify the default aliases for explicit joins.

* Fix a bug where strings wouldn't work as the names of associations in
implicit joins.

* Improve the README

* Fix a bug when combining joins across multiple named filters that introduce
the same join.

= 0.8.0

* Raise an exception when calling order with something that isn't :asc or
:desc

* Use hanna for spiffy rdocs.

* Raise an exception when attempting to add a named filter to a class if there
is already an existing filter with the same name.

* Documentation. 

* Refactored the custom DSL subclass creation code into a DSLFactory class.

* Added a (fairly simple) performance test.

* Get source_type option working for has_many.

* Correct hard-coded primary key columns.

= 0.6.0

* 100% test coverage. That's right, 100%.

* Added fixes for various options on AR associations.

* Support calling named filters from within joins in filters.

* Stop using _inheritable_attribute for accessing the named filters and just recurse for
them.

* Change the tests for named filters to use anonymous classes so that we're
sure we're starting from a blank slate.

* Make the API work correctly for anonymous classes.

* Correctly handle the case where nil or [] is passed as an argument to the IN
restriction.

* Added is_not_null as a nicer version of is_null.not

= 0.2.0 

* Changed the available join types to inner, left and right.

* Fix a bug where we used the wrong type in polymorphic association joins.

* Use with_scope when chaining filters, named_filters, and AR associations in