@@ -4,3 +4,4 @@ pkg
 rdoc
 *.gem
 *.swp
+spec/test.db
